@@ -1,3 +1,10 @@
+2010-01-11  Alan Modra  <amodra@gmail.com>
+
+	PR 6832
+	* dwarf2.c (struct comp_unit): Add sec_info_ptr.
+	(find_abstract_instance_name): Use it.
+	(parse_comp_unit): Set it.
+
 2009-12-21  Alan Modra  <amodra@gmail.com>
 
 	* elf64-ppc.c: Delete my email address.
